auth-service/k8s/namespace-auth.yml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    application: auth
